--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
+    <button id="rock"; value="rock">rock</button>
+    <button id="paper"; value="paper">paper</button>
+    <button id="scissors"; value="scissors">scissors</button>
+    <div id="display">
+
+    </div>
     
 </body>
 </html>
