--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    <button id="rock"; value="rock">rock</button>
-    <button id="paper"; value="paper">paper</button>
-    <button id="scissors"; value="scissors">scissors</button>
+    <button id="rock">rock</button>
+    <button id="paper">paper</button>
+    <button id="scissors">scissors</button>
     <div id="display">
 
     </div>
