--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<script src="script.js"></script>
 <head>
+    <script src="script.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    <button id="rock">rock</button>
-    <button id="paper">paper</button>
-    <button id="scissors">scissors</button>
+    <button id="rock" onclick="playerClick(this.id)">rock</button>
+    <button id="paper" onclick="playerClick(this.id)">paper</button>
+    <button id="scissors" onclick="playerClick(this.id)">scissors</button>
     <div id="display">
 
     </div>
